# YP

./: .gitignore  key.pub  text.cpp
Course_01_(free)/: Search engine.cpp
Course_01_(free)/Theme_05_(Set)/: 01.cpp
Course_01_(free)/Theme_06_(refs)/: 05.cpp
Course_01_(free)/Theme_08_(Simple_algorithms)/: 07 Параллельные алгоритмы.cpp
Course_02/Theme_02_(basic_components)/: 03.txt  04.txt
Course_05/Sprint_14/03_CMake/05_CMake/: CMakeLists(для сдачи).txt  CMakeLists.txt  main.cpp
Course_06/Sprint_15/04_mython/src/: CMakeLists.txt  main.cpp  Поиск непонятных переносов.txt
Course_06/Sprint_15/05_runtime/src/: CMakeLists.txt  main.cpp
Course_06/Sprint_16/02/src/: CMakeLists.txt  main.cpp
Course_06/Sprint_16/02/src/include/: common.h  structures.cpp
P1/: domain.h  input_reader.cpp  input_reader.h  json_reader.cpp  json_reader.h  main.cpp  request_handler.cpp  request_handler.h  stat_reader.h  svg.cpp  transport_catalogue.cpp  transport_catalogue.h
anna/: ans5fdf.txt  geo.h  json.h  map_renderer.cpp  map_renderer.h  stat_reader.cpp  svg.h  test.txt
exercise/: instruction.txt
exercise/Address/: CMakeLists.txt  contact.pb.cc  contact.pb.h  phone_book.cpp  phone_book.h
exercise/person/: CMakeLists.txt  person.proto
exercise/phonebook/: CMakeCache.txt
exercise/protobuf/: Makefile.in
include/: Rational.h  decompressor.h  libstat.cpp  libstat_test.cpp  log_duration.cpp  log_duration.h  paginator.h  process_queries.cpp  process_queries.h  remove_duplicates.cpp  request_queue.cpp  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h  task.txt  test_example_functions.cpp  test_example_functions.h  test_framework.h
include — копия/: custom_algorithms.h  libstat.h  tests.h
include — копия/CMake/: hmirr.cpp  vmirr.cpp
include — копия/budget_manager/: budget_manager.h  bulk_updater.h  parser.cpp  parser.h
include — копия/containers/: optional.h  stack_vector.h
include — копия/custom/: octopus.h
include — копия/ptrs/: ptrvector.h  scopedptr.h
include — копия/runtime/: runtime.cpp  runtime.h
include/CMake/: hmirr.cpp  img_lib.h  jpeg_image.cpp  ppm_image.cpp  sobel.cpp  vmirr.cpp
include/budget_manager/: budget_manager.cpp  budget_manager.h  parser.cpp  parser.h  summing_segment_tree.h
include/containers/: concurrent_map.h  optional.h  simple_vector.h  single_linked_list.h  (+4 more)
test/: test.sln
Сдал/: cell.cpp  cell.h  formula.cpp  main.cpp
(+894 files in other folders)
